# tales-lsp

./: .gitignore  README.md  example.tl  flake.nix  package.json  tale-tale.cabal  tales-lsp.cabal  tsconfig.json  webpack.config.js
app/: Main.hs
src/: extension.ts
syntaxes/: tales.tmLanguage.json
