cabal-version:      3.4
name:               tale-tale
version:            0.1.0.0
-- synopsis:
-- description:
license:            MPL-2.0
license-file:       LICENSE
author:             Andrei Borzenkov
maintainer:         andreyborzenkov2002@gmail.com
-- copyright:
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable tale-tale
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0, lsp, lens, text, these, filepath, co-log-core
    hs-source-dirs:   app
    default-language: GHC2021
