cabal-version:   3.4
name:            tale-tale
version:         0.1.0.0

-- synopsis:
-- description:
license:         MPL-2.0
license-file:    LICENSE
author:          Andrei Borzenkov
maintainer:      andreyborzenkov2002@gmail.com

-- copyright:
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

executable tales-lsp
  import:           warnings
  main-is:          Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , bytestring
    , co-log-core
    , directory
    , filepath
    , lens
    , lsp
    , text
    , text-rope
    , these
    , mtl

  hs-source-dirs:   app
  default-language: GHC2021
